Calc.java 修正版